--- a/README
+++ b/README
@@ -22,3 +22,5 @@ TODO
 * Allow lossless image compression for pngs, gifs and jpegs using external tools like optiPNG.
 
 * Allow the concatenation of CSS and JS files during copy
+
+* Create a template tag to minify inline CSS and javascript with caching
